# Project-Assignment

./: .env  .gitignore  CSS Final Project.pptx  Project-Assignment.code-workspace  example_app.py  load_wiki.ipynb  load_wiki_2.ipynb  main.py  pyproject.toml
data/: SNAP.csv  filtered_negativ_communities.json  filtered_negative.json  filtered_positiv_communities.json  filtered_positive_communities.json  negative_communities.json  negative_graph.json  positive_communities.json  positive_graph.json
src/: TF_IDF.ipynb  app.py  dataset.ipynb  environment.py  fetch_top_posts.py  graph.ipynb  network.ipynb  reddit.ipynb
src/components/plots/: communities.py
src/components/tables/: network_tables.py
src/pages/: datasets.py  goal.py  main.py  semantic.py
src/pages/analysis/: network.py  text.py
src/pages/concluding_remarks/: conclusion.py  discussion.py
