[project]
name = "project-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "netwulf>=0.1.5",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "praw>=7.8.1",
    "python-louvain>=0.16",
    "tqdm>=4.67.3",
]
